--- a/src/app/validationform/validationform.component.css
+++ b/src/app/validationform/validationform.component.css
@@ -1,11 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400, 700);
 
-.error {
-  margin-top: 10px;
-  width: 100%;
-  height: 100%;
+.invalid-reedback {
   color: red;
-  font: 20px;
+  opacity: 0.6;
+  font-size: 1.5vh;
 }
 button {
   overflow: visible;
@@ -25,7 +23,7 @@ textarea {
   margin: 0;
 }
 label {
-  color: rgb(117, 112, 112);
+  color: rgb(12, 12, 12);
   margin-right: 50px;
 }
 
@@ -145,7 +143,7 @@ textarea {
 }
 
 ::-webkit-input-placeholder {
-  color: #474544;
+  color: rgb(158, 155, 155);
 }
 
 :-moz-placeholder {
