--- a/src/app/validationform/validationform.component.html
+++ b/src/app/validationform/validationform.component.html
@@ -20,7 +20,7 @@
       <label for="name"> Nom </label>
       <input type="text" placeholder="BAYPP" id="surname_input" formControlName="surname" [ngClass]="{ 'is-invalid': submitted && f.surname.errors}">
 
-      <div class="error" *ngIf="submitted && f.surname.errors" class="invalid-reedback">
+      <div *ngIf="submitted && f.surname.errors" class="invalid-reedback">
         <div *ngIf="f.surname?.errors.required">Nom de famille obligatoire</div>
       </div>
     </div>
@@ -56,10 +56,11 @@
     <!-- message-->
     <div class="message">
       <label for="message"> Parlez nous de votre projet</label>
-      <textarea formControlName="message" [ngClass]="{ 'is-invalid': submitted && f.message.errors}" placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining ess" id="message_input" cols="30" rows="5" ></textarea>
       <div *ngIf="submitted && f.message.errors" class="invalid-reedback">
         <div *ngIf="f.message?.errors.required">Message obligatoire</div>
       </div>
+      <textarea formControlName="message" [ngClass]="{ 'is-invalid': submitted && f.message.errors}" placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining ess" id="message_input" cols="30" rows="5" ></textarea>
+
     </div>
 
     <!--Valider  -->
